# strapi-data-replicator

./: .gitignore  .versionrc  CHANGELOG.md  Cargo.toml  README.md  crates.js  help.html  index.html  search-index.js  settings.html  source-files.js  src-files.js
.github/: dependabot.yml
.github/workflows/: build.yml  doc.yml  release.yml
docs/: config-format.json
implementors/core/clone/: trait.Clone.js
implementors/core/fmt/: trait.Debug.js
implementors/core/marker/: trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
implementors/serde/de/: trait.Deserialize.js
implementors/serde/ser/: trait.Serialize.js
implementors/std/panic/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
implementors/structopt/: trait.StructOpt.js  trait.StructOptInternal.js
search.desc/strapi_data_replicator/: strapi_data_replicator-desc-0-.js
src/: consts.rs  main.rs  modules.rs
src/modules/: commands.rs  services.rs  types.rs
src/modules/commands/: init.rs  migrate.rs  replicate.rs  tables.rs
src/modules/services/: databases.rs  utils.rs
src/modules/types/: build_info.rs  cli.rs  config.rs  package_json.rs
src/strapi_data_replicator/: consts.rs.html  main.rs.html  modules.rs.html
src/strapi_data_replicator/modules/: commands.rs.html  services.rs.html  types.rs.html
strapi_data_replicator/: all.html  fn.main.html  index.html  sidebar-items.js
strapi_data_replicator/consts/: constant.CONFIG_FILE.html  constant.DATA_PATH.html  constant.SUPPORTED_MONGODB_MAJOR_VERSION.html  enum.DATABASES.html  index.html  sidebar-items.js
strapi_data_replicator/modules/: index.html  sidebar-items.js
strapi_data_replicator/modules/commands/: fn.init.html  fn.migrate.html  fn.replicate.html  fn.tables.html  index.html  sidebar-items.js
strapi_data_replicator/modules/services/: index.html  sidebar-items.js
strapi_data_replicator/modules/types/: index.html  sidebar-items.js
trait.impl/structopt/: trait.StructOpt.js
wix/: main.wxs
(+92 files in other folders)
