[package]
name = "strapi-data-replicator"
description = "Command line tool for replicate data in strapi!"
version = "0.0.8"
authors = ["jabali2004 <32802935+jabali2004@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.21"
quicli = "0.4.0"
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.63"
colored = "2.0.0"
dotenv = "0.15.0"
relative-path = "1.3.2"
console = "0.15.0"
mysql = "21.0.1"
regex = "1.4.3"
semver = "1.0.4"
mongodb = { version = "2.0.0", features = ["sync"], default-features = false }
bson = "2.0.0"
humanesort = "0.1.0-alpha"

[target.x86_64-unknown-linux-musl.dependencies]
openssl-sys = "0.9.60"

[features]
# Force openssl-sys to staticly link in the openssl library. Necessary when
# cross compiling to x86_64-unknown-linux-musl.
vendored = ["openssl-sys/vendored"]
